antlrClasses/BigraphParser.java
// Generated from C:/Users/caste/IdeaProjects/Synkrisis/src\Bigraph.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class BigraphParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		COMMA=1, SEMI=2, COLON=3, DOT=4, ASSIGNMENT=5, WHITESP=6, ESCAPE=7, NEWLINE=8, 
		LSQ=9, RSQ=10, LPAR=11, RPAR=12, LOR=13, PAR=14, DOLLAR=15, UNLINKED=16, 
		ARROW=17, NIL=18, COMMENT=19, LINE_COMMENT=20, CONTROLS=21, ACTIVE=22, 
		PASSIVE=23, NAMES=24, INNER=25, OUTER=26, RULE=27, VARIABLE=28, MODEL=29, 
		PROPERTY=30, AND=31, NOT=32, IF=33, THEN=34, ELSE=35, LEQ=36, GEQ=37, 
		LT=38, GT=39, EQ=40, NEQ=41, FORALL=42, EXISTS=43, TRUE=44, FALSE=45, 
		DIGIT=46, IDENTIFIER=47;
	public static final int
		RULE_bigraph = 0, RULE_controls = 1, RULE_control_statements = 2, RULE_names = 3, 
		RULE_name_statements = 4, RULE_reactions = 5, RULE_reaction_statement = 6, 
		RULE_expression = 7, RULE_regions = 8, RULE_prefix = 9, RULE_links = 10, 
		RULE_model = 11, RULE_property = 12, RULE_property_statement = 13, RULE_boolean_expression = 14, 
		RULE_binary_operation = 15, RULE_term = 16, RULE_parameters_list = 17, 
		RULE_parameter = 18;
	private static String[] makeRuleNames() {
		return new String[] {
			"bigraph", "controls", "control_statements", "names", "name_statements", 
			"reactions", "reaction_statement", "expression", "regions", "prefix", 
			"links", "model", "property", "property_statement", "boolean_expression", 
			"binary_operation", "term", "parameters_list", "parameter"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "','", "';'", "':'", "'.'", "'='", "' '", "'\t'", null, "'['", 
			"']'", "'('", "')'", "'||'", "'|'", "'$'", "'-'", "'->'", "'nil'", null, 
			null, "'controls'", "'active'", "'passive'", "'names'", "'inner'", "'outer'", 
			"'rule'", "'@'", "'model'", "'property'", "'&&'", "'!'", "'if'", "'then'", 
			"'else'", "'<='", "'>='", "'<'", "'>'", "'=='", "'!='", "'forall'", "'exists'", 
			"'true'", "'false'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "COMMA", "SEMI", "COLON", "DOT", "ASSIGNMENT", "WHITESP", "ESCAPE", 
			"NEWLINE", "LSQ", "RSQ", "LPAR", "RPAR", "LOR", "PAR", "DOLLAR", "UNLINKED", 
			"ARROW", "NIL", "COMMENT", "LINE_COMMENT", "CONTROLS", "ACTIVE", "PASSIVE", 
			"NAMES", "INNER", "OUTER", "RULE", "VARIABLE", "MODEL", "PROPERTY", "AND", 
			"NOT", "IF", "THEN", "ELSE", "LEQ", "GEQ", "LT", "GT", "EQ", "NEQ", "FORALL", 
			"EXISTS", "TRUE", "FALSE", "DIGIT", "IDENTIFIER"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Bigraph.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public BigraphParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class BigraphContext extends ParserRuleContext {
		public ControlsContext controls() {
			return getRuleContext(ControlsContext.class,0);
		}
		public BigraphContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_bigraph; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BigraphListener ) ((BigraphListener)listener).enterBigraph(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BigraphListener ) ((BigraphListener)listener).exitBigraph(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BigraphVisitor ) return ((BigraphVisitor<? extends T>)visitor).visitBigraph(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BigraphContext bigraph() throws RecognitionException {
		BigraphContext _localctx = new BigraphContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_bigraph);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(38);
			controls();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ControlsContext extends ParserRuleContext {
		public TerminalNode CONTROLS() { return getToken(BigraphParser.CONTROLS, 0); }
		public TerminalNode COLON() { return getToken(BigraphParser.COLON, 0); }
		public Control_statementsContext control_statements() {
			return getRuleContext(Control_statementsContext.class,0);
		}
		public NamesContext names() {
			return getRuleContext(NamesContext.class,0);
		}
		public ControlsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_controls; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BigraphListener ) ((BigraphListener)listener).enterControls(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BigraphListener ) ((BigraphListener)listener).exitControls(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BigraphVisitor ) return ((BigraphVisitor<? extends T>)visitor).visitControls(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ControlsContext controls() throws RecognitionException {
		ControlsContext _localctx = new ControlsContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_controls);
		try {
			setState(44);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case CONTROLS:
				enterOuterAlt(_localctx, 1);
				{
				setState(40);
				match(CONTROLS);
				setState(41);
				match(COLON);
				setState(42);
				control_statements();
				}
				break;
			case NAMES:
			case RULE:
			case MODEL:
				enterOuterAlt(_localctx, 2);
				{
				setState(43);
				names();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Control_statementsContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(BigraphParser.IDENTIFIER, 0); }
		public TerminalNode DIGIT() { return getToken(BigraphParser.DIGIT, 0); }
		public TerminalNode ACTIVE() { return getToken(BigraphParser.ACTIVE, 0); }
		public TerminalNode PASSIVE() { return getToken(BigraphParser.PASSIVE, 0); }
		public Control_statementsContext control_statements() {
			return getRuleContext(Control_statementsContext.class,0);
		}
		public NamesContext names() {
			return getRuleContext(NamesContext.class,0);
		}
		public Control_statementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_control_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BigraphListener ) ((BigraphListener)listener).enterControl_statements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BigraphListener ) ((BigraphListener)listener).exitControl_statements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BigraphVisitor ) return ((BigraphVisitor<? extends T>)visitor).visitControl_statements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Control_statementsContext control_statements() throws RecognitionException {
		Control_statementsContext _localctx = new Control_statementsContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_control_statements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(46);
			_la = _input.LA(1);
			if ( !(_la==ACTIVE || _la==PASSIVE) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(47);
			match(IDENTIFIER);
			setState(48);
			match(DIGIT);
			setState(51);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case ACTIVE:
			case PASSIVE:
				{
				setState(49);
				control_statements();
				}
				break;
			case NAMES:
			case RULE:
			case MODEL:
				{
				setState(50);
				names();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NamesContext extends ParserRuleContext {
		public TerminalNode NAMES() { return getToken(BigraphParser.NAMES, 0); }
		public TerminalNode COLON() { return getToken(BigraphParser.COLON, 0); }
		public Name_statementsContext name_statements() {
			return getRuleContext(Name_statementsContext.class,0);
		}
		public ReactionsContext reactions() {
			return getRuleContext(ReactionsContext.class,0);
		}
		public NamesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_names; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BigraphListener ) ((BigraphListener)listener).enterNames(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BigraphListener ) ((BigraphListener)listener).exitNames(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BigraphVisitor ) return ((BigraphVisitor<? extends T>)visitor).visitNames(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NamesContext names() throws RecognitionException {
		NamesContext _localctx = new NamesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_names);
		try {
			setState(57);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case NAMES:
				enterOuterAlt(_localctx, 1);
				{
				setState(53);
				match(NAMES);
				setState(54);
				match(COLON);
				setState(55);
				name_statements();
				}
				break;
			case RULE:
			case MODEL:
				enterOuterAlt(_localctx, 2);
				{
				setState(56);
				reactions();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Name_statementsContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(BigraphParser.IDENTIFIER, 0); }
		public TerminalNode INNER() { return getToken(BigraphParser.INNER, 0); }
		public TerminalNode OUTER() { return getToken(BigraphParser.OUTER, 0); }
		public Name_statementsContext name_statements() {
			return getRuleContext(Name_statementsContext.class,0);
		}
		public ReactionsContext reactions() {
			return getRuleContext(ReactionsContext.class,0);
		}
		public Name_statementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_name_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BigraphListener ) ((BigraphListener)listener).enterName_statements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BigraphListener ) ((BigraphListener)listener).exitName_statements(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BigraphVisitor ) return ((BigraphVisitor<? extends T>)visitor).visitName_statements(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Name_statementsContext name_statements() throws RecognitionException {
		Name_statementsContext _localctx = new Name_statementsContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_name_statements);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			_la = _input.LA(1);
			if ( !(_la==INNER || _la==OUTER) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(60);
			match(IDENTIFIER);
			setState(63);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INNER:
			case OUTER:
				{
				setState(61);
				name_statements();
				}
				break;
			case RULE:
			case MODEL:
				{
				setState(62);
				reactions();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReactionsContext extends ParserRuleContext {
		public TerminalNode RULE() { return getToken(BigraphParser.RULE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(BigraphParser.IDENTIFIER, 0); }
		public TerminalNode ASSIGNMENT() { return getToken(BigraphParser.ASSIGNMENT, 0); }
		public Reaction_statementContext reaction_statement() {
			return getRuleContext(Reaction_statementContext.class,0);
		}
		public ReactionsContext reactions() {
			return getRuleContext(ReactionsContext.class,0);
		}
		public ModelContext model() {
			return getRuleContext(ModelContext.class,0);
		}
		public ReactionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_reactions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BigraphListener ) ((BigraphListener)listener).enterReactions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BigraphListener ) ((BigraphListener)listener).exitReactions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BigraphVisitor ) return ((BigraphVisitor<? extends T>)visitor).visitReactions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ReactionsContext reactions() throws RecognitionException {
		ReactionsContext _localctx = new ReactionsContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_reactions);
		try {
			setState(72);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case RULE:
				enterOuterAlt(_localctx, 1);
				{
				setState(65);
				match(RULE);
				setState(66);
				match(IDENTIFIER);
				setState(67);
				match(ASSIGNMENT);
				setState(68);
				reaction_statement();
				setState(69);
				reactions();
				}
				break;
			case MODEL:
				enterOuterAlt(_localctx, 2);
				{
				setState(71);
				model();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Reaction_statementContext extends ParserRuleContext {
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode ARROW() { return getToken(BigraphParser.ARROW, 0); }
		public Reaction_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_reaction_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BigraphListener ) ((BigraphListener)listener).enterReaction_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BigraphListener ) ((BigraphListener)listener).exitReaction_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BigraphVisitor ) return ((BigraphVisitor<? extends T>)visitor).visitReaction_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Reaction_statementContext reaction_statement() throws RecognitionException {
		Reaction_statementContext _localctx = new Reaction_statementContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_reaction_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			expression();
			setState(75);
			match(ARROW);
			setState(76);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(BigraphParser.IDENTIFIER, 0); }
		public TerminalNode LSQ() { return getToken(BigraphParser.LSQ, 0); }
		public LinksContext links() {
			return getRuleContext(LinksContext.class,0);
		}
		public TerminalNode RSQ() { return getToken(BigraphParser.RSQ, 0); }
		public RegionsContext regions() {
			return getRuleContext(RegionsContext.class,0);
		}
		public PrefixContext prefix() {
			return getRuleContext(PrefixContext.class,0);
		}
		public TerminalNode DIGIT() { return getToken(BigraphParser.DIGIT, 0); }
		public TerminalNode DOLLAR() { return getToken(BigraphParser.DOLLAR, 0); }
		public TerminalNode LPAR() { return getToken(BigraphParser.LPAR, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RPAR() { return getToken(BigraphParser.RPAR, 0); }
		public TerminalNode NIL() { return getToken(BigraphParser.NIL, 0); }
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BigraphListener ) ((BigraphListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BigraphListener ) ((BigraphListener)listener).exitExpression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BigraphVisitor ) return ((BigraphVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_expression);
		int _la;
		try {
			setState(110);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(78);
				match(IDENTIFIER);
				setState(83);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LSQ) {
					{
					setState(79);
					match(LSQ);
					setState(80);
					links();
					setState(81);
					match(RSQ);
					}
				}

				setState(87);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case LOR:
				case PAR:
					{
					setState(85);
					regions();
					}
					break;
				case DOT:
					{
					setState(86);
					prefix();
					}
					break;
				case EOF:
				case COMMA:
				case RPAR:
				case ARROW:
				case RULE:
				case MODEL:
				case PROPERTY:
					break;
				default:
					break;
				}
				}
				break;
			case DIGIT:
				enterOuterAlt(_localctx, 2);
				{
				setState(89);
				match(DIGIT);
				setState(92);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case LOR:
				case PAR:
					{
					setState(90);
					regions();
					}
					break;
				case DOT:
					{
					setState(91);
					prefix();
					}
					break;
				case EOF:
				case COMMA:
				case RPAR:
				case ARROW:
				case RULE:
				case MODEL:
				case PROPERTY:
					break;
				default:
					break;
				}
				}
				break;
			case DOLLAR:
				enterOuterAlt(_localctx, 3);
				{
				setState(94);
				match(DOLLAR);
				setState(95);
				match(DIGIT);
				setState(98);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case LOR:
				case PAR:
					{
					setState(96);
					regions();
					}
					break;
				case DOT:
					{
					setState(97);
					prefix();
					}
					break;
				case EOF:
				case COMMA:
				case RPAR:
				case ARROW:
				case RULE:
				case MODEL:
				case PROPERTY:
					break;
				default:
					break;
				}
				}
				break;
			case LPAR:
				enterOuterAlt(_localctx, 4);
				{
				setState(100);
				match(LPAR);
				setState(101);
				expression();
				setState(102);
				match(RPAR);
				setState(104);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LOR || _la==PAR) {
					{
					setState(103);
					regions();
					}
				}

				}
				break;
			case NIL:
				enterOuterAlt(_localctx, 5);
				{
				setState(106);
				match(NIL);
				setState(108);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==LOR || _la==PAR) {
					{
					setState(107);
					regions();
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class RegionsContext extends ParserRuleContext {
		public TerminalNode LOR() { return getToken(BigraphParser.LOR, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode PAR() { return getToken(BigraphParser.PAR, 0); }
		public RegionsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_regions; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BigraphListener ) ((BigraphListener)listener).enterRegions(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BigraphListener ) ((BigraphListener)listener).exitRegions(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BigraphVisitor ) return ((BigraphVisitor<? extends T>)visitor).visitRegions(this);
			else return visitor.visitChildren(this);
		}
	}

	public final RegionsContext regions() throws RecognitionException {
		RegionsContext _localctx = new RegionsContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_regions);
		try {
			setState(116);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LOR:
				enterOuterAlt(_localctx, 1);
				{
				setState(112);
				match(LOR);
				setState(113);
				expression();
				}
				break;
			case PAR:
				enterOuterAlt(_localctx, 2);
				{
				setState(114);
				match(PAR);
				setState(115);
				expression();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PrefixContext extends ParserRuleContext {
		public TerminalNode DOT() { return getToken(BigraphParser.DOT, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public PrefixContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prefix; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BigraphListener ) ((BigraphListener)listener).enterPrefix(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BigraphListener ) ((BigraphListener)listener).exitPrefix(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BigraphVisitor ) return ((BigraphVisitor<? extends T>)visitor).visitPrefix(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PrefixContext prefix() throws RecognitionException {
		PrefixContext _localctx = new PrefixContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_prefix);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118);
			match(DOT);
			setState(119);
			expression();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LinksContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(BigraphParser.IDENTIFIER, 0); }
		public TerminalNode COMMA() { return getToken(BigraphParser.COMMA, 0); }
		public LinksContext links() {
			return getRuleContext(LinksContext.class,0);
		}
		public TerminalNode VARIABLE() { return getToken(BigraphParser.VARIABLE, 0); }
		public TerminalNode UNLINKED() { return getToken(BigraphParser.UNLINKED, 0); }
		public LinksContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_links; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof BigraphListener ) ((BigraphListener)listener).enterLinks(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof BigraphListener ) ((BigraphListener)listener).exitLinks(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof BigraphVisitor ) return ((BigraphVisitor<? extends T>)visitor).visitLinks(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LinksContext links() throws RecognitionException {
		LinksContext _localctx = new LinksContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_links);
		int _la;
		try {
			setState(137);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(121);
				match(IDENTIFIER);
				setState(124);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(122);
					match(COMMA);
					setState(123);
					links();
					}
				}

				}
				break;
			case VARIABLE:
				enterOuterAlt(_localctx, 2);
				{
				setState(126);
				match(VARIABLE);
				setState(127);
				match(IDENTIFIER);
				setState(130);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(128);
					match(COMMA);
					setState(129);
					links();
					}
				}

				}
				break;
			case UNLINKED:
				enterOuterAlt(_localctx, 3);
				{
				setState(132);
				match(UNLINKED);
				setState(135);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==COMMA) {
					{
					setState(133);
					match(COMMA);
					setState(134);
					links();
					}
				}

				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
